blocks: tries to fix z-index problem with buttons

--- a/components/forms/stylesheets/index.styl
+++ b/components/forms/stylesheets/index.styl
@@ -117,7 +117,7 @@ button
   font-weight bold
   color textgray
   padding 0
-  z-index 5000
+  z-index 99
   
   &:hover
     color hovergray
